# symphony-medical-coder-llm

./: .env.example  .gitignore  README.md  input.txt  medical-coder-llm-bundle.spec  output.json  pyproject.toml
.github/workflows/: release-binaries.yml
data/: input.sample.txt
data/ontology/: codes.csv
scripts/: build_ontology_cms.py  enrich_ontology_search_terms.py
src/medical_coder_llm/: __init__.py  __main__.py  cli.py  run_code.py  types.py
src/medical_coder_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/medical_coder_llm/config/: __init__.py  models.py
src/medical_coder_llm/llm/: client.py  types.py
src/medical_coder_llm/llm/providers/: gemini.py  openai.py
src/medical_coder_llm/ontology/: __init__.py  default_codes.csv  loader.py  search.py
src/medical_coder_llm/output/: __init__.py  format.py  stage_payloads.py
src/medical_coder_llm/pipeline/: __init__.py  orchestrator.py
src/medical_coder_llm/pipeline/stages/: code_reconciliation.py  evidence_extraction.py  index_navigation.py  tabular_validation.py
src/medical_coder_llm/web/: __init__.py  app.py  main.py
src/medical_coder_llm/web/static/: app.js  index.html  styles.css
