[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-coder-llm"
version = "0.2.2"
description = "Medical coding CLI pipeline (Python port of with-bun)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[project.scripts]
medical-coder-llm = "medical_coder_llm.cli:main"
medical-coder-llm-web = "medical_coder_llm.web.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"medical_coder_llm.web" = ["static/*"]
"medical_coder_llm.ontology" = ["default_codes.csv"]

[dependency-groups]
dev = ["pyinstaller>=6.0"]
